test/classes/errors/nilability-init-var/init-var-oknil-shared-from-oknil-nil.chpl
//  lhs: shared?  rhs: nil?  ok

class MyClass {
  var x: int;
}



var lhs: shared MyClass? = nil;


